# fastbom

./: .gitignore  AGENTS.md  AGENTS.zh-CN.md  BUILD.md  BUILD.zh-CN.md  FastBom.spec  PLAN.md  PLAN.zh-CN.md  README.md  README.zh-CN.md  README.zh.md  build-backup-1.py  build.py  demo2.py  demo3.py  demo4.py  demo5.py  dxf_exporter.py  main.py  pmms-integration-materials  pyproject.toml  requirements.txt  run.py  使用说明.txt
auth/: __init__.py  session.py
config/: __init__.py  app_metadata.py  settings.py
core/: __init__.py  bom_classifier.py  dxf_processor.py  file_export.py  set_template.py  set_views.py  sw_converter.py
doc/: TIPS_FOR_DEV_1.md  TIPS_FOR_DEV_2.md
docs/: PROMPT.md  VBA_TO_PYTHON.md  qt-navigation.md  qt-navigation.zh-CN.md
gui/: __init__.py  gui.py  login_dialog.py  main_window.py  worker_thread copy.py  worker_thread.py
pmms-integration-materials/: README.zh-CN.md  backend-api-contract.zh-CN.md  handoff-checklist.zh-CN.md  residual-material-page-spec.zh-CN.md  sample-payloads.json  user-management-api.zh-CN.md
services/: __init__.py  auth_service.py  remote_api.py
src/: demo1.py  demo10.py  demo11.py  demo2.py  demo5.py  demo6.py  demo7.py  demo8.py  demo9.py
template/: A0.DRWDOT  A1.drwdot  A2.drwdot  A3.drwdot  A4-竖.drwdot  A4.drwdot  GB-3.5新-小箭头.sldstd  a0图纸格式.slddrt  a1图纸格式.slddrt  a2图纸格式.slddrt  a3图纸格式.slddrt  a4图纸格式-竖.slddrt  a4图纸格式.slddrt
tests/: test_auth_service.py  test_bom_classifier.py  test_core_settings_injection.py  test_dxf_processor.py  test_local_processing_page_navigation.py  test_login_dialog.py  test_main_startup.py  (+8 more)
(+14 files in other folders)
