[project]
name = "fastbom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nicegui>=3.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "pyinstaller>=6.17.0",
    "pywebview>=6.1",
    "xlrd>=2.0.2",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
