[project]
name = "fastbom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ezdxf>=1.4.3",
    "loguru>=0.7.3",
    "nicegui>=3.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "pyinstaller>=6.17.0",
    "pyside6>=6.10.1",
    "pywebview>=6.1",
    "pywin32>=311",
    "qt-material>=2.17",
    "xlrd>=2.0.2",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
